<resources>
    <string name="app_name">My Application</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="repos">Repos</string>
    <string name="user_name">User Name:</string>
    <string name="created_at">Created At:</string>
    <string name="info">Info</string>
    <string name="public_repos">Poblic Repositories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="profile_picture">Profile Picture</string>
</resources>